# stdexec-sandbox

./: .gitmodules  AsyncReader.hpp  Backend.cpp  Backend.hpp  CMakeLists.txt  ChannelView.hpp  Context.hpp  FakeServerDemo.hpp  Generator.hpp  Image.cpp  Image.hpp  Input.cpp  Input.hpp  Lazy.hpp  LibuvFakeServer.cpp  LibuvFakeServer.hpp  LibuvThreadPool.hpp  Output.cpp  Output.hpp  QueueScheduler.hpp  Retry.hpp  SingleShotEvent.hpp  TaskStream.hpp  Transformator.cpp  Transformator.hpp  durations.hpp  main.cpp  std_generator.hpp  util.hpp
doc/: OptickCapture.opt  results.md
